--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
-  "devDependencies": {
-    "vite": "^4.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite-tsconfig-paths": "^4.2.0"
+ "devDependencies": {
+  "vite": "^4.0.0",
+  "@vitejs/plugin-react": "^4.0.0",
+  "vite-tsconfig-paths": "^4.2.0",
+  "@dhiwise/component-tagger": "^1.0.0"
+
   }
 }
